Update version to java 19 compatible